# nexora

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Jenkinsfile  LICENSE  LICENSE-MIT  README.md  SECURITY.md  design-qa.md
apps/console/: Cargo.toml
apps/console/src/: app.rs  auth.rs  config.rs  features.rs  lib.rs  main.rs
apps/console/src/features/: home.rs  login.rs  projects.rs  roles.rs  root.rs  settings.rs  tasks.rs  users.rs  virtual_scroll.rs
apps/console/tests/: features.rs
apps/server/: Cargo.toml
apps/server/src/: bootstrap.rs  config.rs  main.rs  routers.rs  setup.rs  super_admin.rs
apps/server/tests/: configuration.rs  startup_error.rs
changelogs/: README.md
crates/api/: Cargo.toml
crates/api/src/: error.rs  extract.rs  lib.rs  request_id.rs  router.rs
crates/configuration/: Cargo.toml  README.md
crates/configuration/src/: error.rs  lib.rs  loader.rs  store.rs
crates/configuration/tests/: configuration.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: desktop.rs  lib.rs
crates/desktop/tests/: application.rs
crates/macros/: Cargo.toml  MACRO_AUDIT.md
crates/macros/benches/: crud_table_row.rs
crates/macros/src/: crud_table.rs  lib.rs
crates/macros/tests/: crud_table_row.rs  feature.rs  legacy_feature_parent.rs  navigation_group.rs  settings.rs  sidebar.rs  singletons.rs  visible_permissions.rs
crates/macros/tests/ui/: crud_table_row_duplicate_key.rs  crud_table_row_duplicate_key.stderr  crud_table_row_duplicate_sort.rs  crud_table_row_duplicate_sort.stderr  crud_table_row_invalid_dimension.rs  crud_table_row_invalid_dimension.stderr  crud_table_row_no_columns.rs  crud_table_row_no_columns.stderr  crud_table_row_skip_and_column.rs  crud_table_row_skip_and_column.stderr  crud_table_support.rs  feature_parent.rs  feature_parent.stderr  feature_visible_permissions.rs  feature_visible_permissions.stderr
crates/migrate/: Cargo.toml  README.md
crates/migrate/migrations/: 0001_account_create_rbac.down.sql  0001_account_create_rbac.up.sql  0002_account_add_super_admin.down.sql  0002_account_add_super_admin.up.sql  0003_account_rework_system_initialization.down.sql  0003_account_rework_system_initialization.up.sql  0004_account_change_identifier_types.down.sql  0004_account_change_identifier_types.up.sql  0005_account_bind_identity_issuer.down.sql  0005_account_bind_identity_issuer.up.sql  0006_account_add_username.down.sql  0006_account_add_username.up.sql  0007_account_backfill_admin_permissions.down.sql  0007_account_backfill_admin_permissions.up.sql  0008_account_permission_implications.down.sql  0008_account_permission_implications.up.sql  0009_account_add_user_avatar_permission.down.sql  0009_account_add_user_avatar_permission.up.sql  0010_account_role_owner_scope.down.sql  0010_account_role_owner_scope.up.sql
crates/migrate/src/: lib.rs  main.rs  safety.rs
crates/migrate/tests/: data_preservation.rs  migrations.rs  safety.rs
crates/nexora/: Cargo.toml  LINTS.md
crates/nexora/src/: account.rs  application.rs  config.rs  defaults.rs  desktop.rs  lib.rs  metadata.rs  registry.rs  route.rs  runtime.rs  server.rs
crates/nexora/src/account/: client.rs  setup.rs
crates/nexora/src/account/client/: runtime.rs
crates/nexora/src/defaults/: account.rs  login.rs  settings.rs
crates/nexora/src/defaults/account/: roles.rs  users.rs
crates/nexora/templates/scaffold/: AGENTS.md  README.md  gitignore.askama  main.rs
crates/nexora/templates/scaffold/features/: home.rs
crates/nexora/templates/scaffold/single/: Cargo.toml.askama
crates/nexora/templates/scaffold/workspace/: Cargo.toml.askama
crates/nexora/templates/skills/axum-web-framework/: SKILL.md
crates/nexora/templates/skills/build-modular-axum-backend/: SKILL.md
crates/nexora/templates/skills/define-page/: SKILL.md
crates/nexora/templates/skills/desktop-ui-component-selection/: SKILL.md
crates/nexora/templates/skills/develop-nexora-apps/: SKILL.md
crates/nexora/tests/: account_client_contract.rs  account_facade.rs  account_runtime.rs  application.rs  build.rs  cli.rs  config.rs  defaults.rs  discovery.rs  lint.rs  login_singleton_discovery.rs  routes.rs  runtime.rs  sidebar.rs  singletons.rs
crates/oidc/: Cargo.toml
crates/oidc/src/: lib.rs
crates/oidc/tests/: oidc.rs
crates/ui/: Cargo.toml
crates/ui/src/: card.rs  cascader.rs  crud_panel.rs  crud_table.rs  form_dialog.rs  layout.rs  lib.rs  login_gate.rs  panel_dialog.rs  panel_header.rs  sidebar_region.rs  table_cell.rs  table_header.rs  ui.rs  window_layers.rs
crates/ui/tests/: cascader.rs  crud_panel.rs  form_dialog.rs  panel_dialog.rs  sidebar_region.rs  sidebar_shell.rs  workspace_layout.rs
crates/updater/: Cargo.toml  README.md
crates/updater/assets/: install-update.sh
crates/updater/src/: dialog.rs  lib.rs  macos.rs  manifest.rs  service.rs
crates/updater/tests/: installer.rs  manifest.rs
examples/basic-workspace/: .gitignore  Cargo.toml  README.md
examples/basic-workspace/apps/basic-workspace/: Cargo.toml
examples/server/: Cargo.toml
examples/server/src/: bootstrap.rs  config.rs  main.rs
examples/server/tests/: configuration.rs  startup_error.rs
modules/account/: Cargo.toml  build.rs
modules/account/src/: account.rs  application.rs  authentication.rs  authorization.rs  directory.rs  domain.rs  entities.rs  errors.rs  generated.rs  handlers.rs  models.rs  provisioning.rs  routers.rs  stores.rs  zitadel.rs  zitadel_user.rs
modules/account/src/authentication/: oidc.rs
modules/account/src/authorization/: accounts.rs
modules/account/src/domain/: account.rs
modules/account/src/entities/: account.rs
modules/account/src/handlers/: accounts.rs
modules/account/src/models/: account.rs
modules/account/src/routers/: accounts.rs
modules/account/src/stores/: accounts.rs  identities.rs  permissions.rs  roles.rs  system_initialization.rs  users.rs
modules/account/tests/: application.rs  entities.rs  errors.rs  http.rs  oidc_verifier.rs  postgres_store.rs  zitadel_directory.rs  zitadel_provisioning.rs
(+343 files in other folders)
