[workspace]
resolver = "3"
members = [
    "apps/cli",
    "apps/console",
    "apps/server",
    "crates/actions",
    "crates/changelog",
    "crates/configuration",
    "crates/desktop",
    "crates/theme",
    "crates/ui",
    "crates/updater",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
actions = { path = "crates/actions" }
changelog = { path = "crates/changelog" }
configuration = { path = "crates/configuration" }
desktop = { path = "crates/desktop" }
theme = { path = "crates/theme" }
ui = { path = "crates/ui" }
updater = { path = "crates/updater" }

# 命令行参数
clap = { version = "4", features = ["derive"] }

# 数据格式
config-rs = { package = "config", version = "0.15.25", default-features = false, features = ["toml"] }
directories = { version = "6", default-features = false }
include_dir = { version = "0.7", default-features = false }
semver = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false, features = ["std"] }
thiserror = { version = "2", default-features = false, features = ["std"] }
toml = { version = "1", default-features = false, features = ["display", "serde", "std"] }
toml_edit = { version = "0.22", default-features = false, features = ["parse"] }

# 更新下载
async-channel = { version = "2", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Rust 源码分析
proc-macro2 = { version = "1", default-features = false, features = ["span-locations"] }
# xuwe-lint: allow(xuwe::broad_dependency_feature) reason="CLI 需要解析完整 Rust 文件 AST"
syn = { version = "2", default-features = false, features = ["full", "parsing", "printing", "visit"] }

# UI 框架
gpui = { git = "https://github.com/zed-industries/zed", default-features = false }
gpui_platform = { git = "https://github.com/zed-industries/zed", default-features = false }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
# 可选：使用内置默认资源
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }
smol = { opt-level = 3 }
gpui = { opt-level = 3 }
gpui_platform = { opt-level = 3 }
gpui_macros = { opt-level = 3 }
gpui_wgpu = { opt-level = 3 }
gpui_macos = { opt-level = 3 }
gpui_util = { opt-level = 3 }
"gpui-component" = { opt-level = 3 }
"gpui-component-assets" = { opt-level = 3 }
"gpui-component-macros" = { opt-level = 3 }
sum_tree = { opt-level = 3 }
ropey = { opt-level = 3 }
lsp-types = { opt-level = 3 }
markdown = { opt-level = 3 }
xml5ever = { opt-level = 3 }
