[workspace]
resolver = "3"
members = [
    "examples/console",
    "examples/server",
    "crates/actions",
    "crates/api",
    "crates/changelog",
    "crates/configuration",
    "crates/contracts",
    "crates/desktop",
    "crates/kernel",
    "crates/logging",
    "crates/macros",
    "crates/migrate",
    "crates/nexora",
    "crates/oidc",
    "crates/theme",
    "crates/ui",
    "crates/updater",
    "modules/*",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xuwe-projects/nexora"
homepage = "https://github.com/xuwe-projects/nexora"

[workspace.dependencies]
account = { version = "0.6.0", path = "modules/account", default-features = false }
actions = { path = "crates/actions" }
api = { path = "crates/api" }
changelog = { path = "crates/changelog" }
configuration = { version = "0.6.0", path = "crates/configuration" }
contracts = { version = "0.6.0", path = "crates/contracts" }
desktop = { version = "0.6.0", path = "crates/desktop" }
kernel = { path = "crates/kernel" }
logging = { path = "crates/logging" }
macros = { package = "nexora-macros", version = "0.6.0", path = "crates/macros" }
migrate = { version = "0.6.0", path = "crates/migrate", default-features = false }
nexora = { version = "0.6.0", path = "crates/nexora" }
oidc = { version = "0.6.0", path = "crates/oidc" }
theme = { path = "crates/theme" }
ui = { path = "crates/ui" }
updater = { path = "crates/updater" }

# 命令行参数
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.12", default-features = false }

# 数据格式
askama = { version = "0.16.0", default-features = false, features = ["derive", "std"] }
config-rs = { package = "config", version = "0.15.25", default-features = false, features = ["toml"] }
directories = { version = "6", default-features = false }
include_dir = { version = "0.7", default-features = false }
inventory = { version = "0.3.24", default-features = false }
matchit = { version = "0.8.4", default-features = false }
percent-encoding = { version = "2.3.2", default-features = false }
semver = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_html_form = { version = "0.4.1", default-features = false, features = ["de", "std"] }
serde_json = "1"
serde_path_to_error = { version = "0.1.20", default-features = false }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
thiserror = { version = "2", default-features = false, features = ["std"] }
toml = { version = "1", default-features = false, features = ["display", "serde", "std"] }
toml_edit = { version = "0.22", default-features = false, features = ["parse"] }
trybuild = "1"
url = { version = "2", default-features = false, features = ["serde", "std"] }
uuid = { version = "1.23.5", default-features = false, features = ["serde", "v7"] }

# 服务端异步、HTTP 与 PostgreSQL
async-trait = { version = "0.1.89", default-features = false }
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "matched-path", "query", "tokio"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde", "std"] }
grpc = "0.9.0"
grpc-protobuf = "0.9.0"
grpc-protobuf-build = "0.9.0"
protobuf = "4.34.0-release"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
sqlx = { version = "0.9.0", default-features = false, features = ["chrono", "postgres", "runtime-tokio", "tls-rustls-ring-native-roots", "uuid"] }
tokio = { version = "1.52.3", default-features = false }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "registry"] }

# 更新下载
async-channel = { version = "2", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# 桌面认证
base64 = { version = "0.22", default-features = false, features = ["std"] }
jsonwebtoken = { version = "10.4", default-features = false, features = ["rust_crypto"] }
keyring = { version = "4.1.4", default-features = false, features = ["v1"] }
rand = { version = "0.9", default-features = false, features = ["os_rng", "std"] }
security-framework = { version = "3.7.0", default-features = false }

# Rust 源码分析
proc-macro2 = { version = "1", default-features = false, features = ["span-locations"] }
proc-macro-crate = { version = "3.5.0", default-features = false }
quote = { version = "1", default-features = false }
# nexora-lint: allow(nexora::broad_dependency_feature) reason="CLI 需要解析完整 Rust 文件 AST"
syn = { version = "2", default-features = false, features = ["full", "parsing", "printing", "visit"] }

# UI 框架
gpui = { version = "0.2.2", git = "https://github.com/zed-industries/zed", rev = "1a246efd7e1b83ab568ec5e3e6c1a43a42e1abba", default-features = false }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1a246efd7e1b83ab568ec5e3e6c1a43a42e1abba", default-features = false }
reqwest_client = { git = "https://github.com/zed-industries/zed", rev = "1a246efd7e1b83ab568ec5e3e6c1a43a42e1abba", default-features = false }
gpui-component = { version = "0.5.2", git = "https://github.com/longbridge/gpui-component", rev = "031555662e99a1b5a549990b47f246d475b8288a" }
# 可选：使用内置默认资源
gpui-component-assets = { version = "0.5.1", git = "https://github.com/longbridge/gpui-component", rev = "031555662e99a1b5a549990b47f246d475b8288a" }
raw-window-handle = { version = "0.6", default-features = false }
windows = { version = "0.61.3", default-features = false }

[replace]
# gpui-component 0315556 仍以未固定的 Zed git source 声明依赖。根工作区将其
# 直接依赖替换为固定 revision，避免 Cargo 生成两套 gpui 类型。
"https://github.com/zed-industries/zed#gpui@0.2.2" = { git = "https://github.com/zed-industries/zed", rev = "1a246efd7e1b83ab568ec5e3e6c1a43a42e1abba" }
"https://github.com/zed-industries/zed#gpui_macros@0.1.0" = { git = "https://github.com/zed-industries/zed", rev = "1a246efd7e1b83ab568ec5e3e6c1a43a42e1abba" }

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }
smol = { opt-level = 3 }
gpui = { opt-level = 3 }
gpui_platform = { opt-level = 3 }
gpui_macros = { opt-level = 3 }
gpui_wgpu = { opt-level = 3 }
gpui_macos = { opt-level = 3 }
gpui_util = { opt-level = 3 }
"gpui-component" = { opt-level = 3 }
"gpui-component-assets" = { opt-level = 3 }
"gpui-component-macros" = { opt-level = 3 }
sum_tree = { opt-level = 3 }
ropey = { opt-level = 3 }
lsp-types = { opt-level = 3 }
markdown = { opt-level = 3 }
xml5ever = { opt-level = 3 }
