[package]
name = "console"
version.workspace = true
edition.workspace = true

[package.metadata.bundle]
icon = ["assets/logos/logo-icon.icns"]

[dependencies]
actions = { workspace = true }
changelog = { workspace = true }
configuration = { workspace = true }
desktop = { workspace = true }
logging = { workspace = true }
oidc = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
theme = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ui = { workspace = true }
updater = { workspace = true }

gpui = { workspace = true }
gpui-component = { workspace = true }
keyring = { workspace = true }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true }
