[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
contracts = { workspace = true }
kernel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tower-http = { workspace = true, features = ["sensitive-headers", "trace"] }
tracing = { workspace = true }
