[package]
name = "configuration"
version.workspace = true
edition.workspace = true

[dependencies]
config-rs = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
