[package]
name = "desktop"
version.workspace = true
edition.workspace = true

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
# 可选：使用内置默认资源
gpui-component-assets = { workspace = true }
reqwest_client = { workspace = true }
theme = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

[target.'cfg(target_os = "macos")'.dependencies]
gpui = { workspace = true, features = ["font-kit"] }
gpui_platform = { workspace = true, features = ["font-kit"] }

[target.'cfg(target_os = "windows")'.dependencies]
gpui = { workspace = true, features = ["windows-manifest"] }
gpui_platform = { workspace = true }
raw-window-handle = { workspace = true, features = ["std"] }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
gpui = { workspace = true, features = ["wayland", "x11"] }
gpui_platform = { workspace = true, features = ["wayland", "x11"] }
