[package]
name = "oidc"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
jsonwebtoken = { workspace = true, features = ["use_pem"] }
