[package]
name = "ui"
version.workspace = true
edition.workspace = true

[lib]
path = "src/ui.rs"

[target.'cfg(target_os = "macos")'.dependencies]
gpui_platform = { workspace = true, features = ["font-kit"] }

[target.'cfg(target_os = "windows")'.dependencies]
gpui_platform = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
gpui_platform = { workspace = true, features = ["wayland", "x11"] }

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
# 可选：使用内置默认资源
gpui-component-assets = { workspace = true }