[workspace]
resolver = "3"
default-members = ["apps/basic-workspace"]
members = [
    "apps/basic-workspace",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
nexora = { path = "../../crates/nexora", default-features = false }

[patch.crates-io]
# GPUI 当前仍依赖已被 crates.io 撤回的版本，临时固定到对应源码 revision。
spin_09 = { package = "spin", git = "https://github.com/mvdnes/spin-rs.git", rev = "502c9dca17c99762184095c9d64c0aedd1db97ff" }
spin_10 = { package = "spin", git = "https://github.com/mvdnes/spin-rs.git", rev = "4a6cc16c47dbffab0225717056aebb2f06cb163c" }
