[package]
name = "server"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
account = { workspace = true, features = ["zitadel"] }
api = { workspace = true }
axum = { workspace = true, features = ["form"] }
clap = { workspace = true }
configuration = { workspace = true }
contracts = { workspace = true }
logging = { workspace = true }
migrate = { workspace = true, default-features = false }
rand = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = { workspace = true }
url = { workspace = true }
