[package]
name = "account"
version.workspace = true
edition.workspace = true

[lib]
path = "src/account.rs"

[features]
database-tests = []

[dependencies]
api = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
contracts = { workspace = true }
jsonwebtoken = { workspace = true }
kernel = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
jsonwebtoken = { workspace = true, features = ["use_pem"] }
sqlx = { workspace = true, features = ["macros", "migrate"] }
tokio = { workspace = true, features = ["macros", "rt"] }
tower = { workspace = true, features = ["util"] }
