[package]
name = "account"
version.workspace = true
edition.workspace = true

[lib]
path = "src/account.rs"

[features]
database-tests = []

[dependencies]
api = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
contracts = { workspace = true }
grpc = { workspace = true }
grpc-protobuf = { workspace = true }
jsonwebtoken = { workspace = true }
kernel = { workspace = true }
protobuf = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
jsonwebtoken = { workspace = true, features = ["use_pem"] }
sqlx = { workspace = true, features = ["macros", "migrate"] }
tokio = { workspace = true, features = ["macros", "rt"] }
tower = { workspace = true, features = ["util"] }

[build-dependencies]
grpc-protobuf-build = { workspace = true }
